--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Liam Harris, Horrible Cop
 ---
 <div class="blurb">
-	<h1>Hi there, I'm not Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Super Important Title Text</h1>
+	<p>Less important sub heading text <em>Moderately important text</em> back to unimportant. <a href="/about">The mystery box could be anything</a></p>
 </div><!-- /.blurb -->
