--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Liam Harris, Horrible Cop
 ---
 <div class="blurb">
 	<h1>Super Important Title Text</h1>
-	<p>Less important sub heading text <em>Moderately important text</em> back to unimportant. <a href="/about">The mystery box could be anything</a></p>
+	<p>Less important sub heading text, <em> Moderately important text</em> and back to unimportant. <a href="/about">The mystery box could be anything</a></p>
 </div><!-- /.blurb -->
