--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,8 @@
-
+---
+layout: default
+title: About
+---
+<div class="blurb">
+	<h1>Super Important Title Text</h1>
+	<p>Enlightened alt-centrist</p>
+</div><!-- /.blurb -->
