--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Liam Harris, Horrible Cop
+title: Liam Harris, Ten Billion Space Bux
 ---
 <div class="blurb">
 	<h1>Super Important Title Text</h1>
