--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+---
+title: Liam Harris
+---
+
 <!DOCTYPE html>
 <!-- saved from url=(0040)https://getbootstrap.com/examples/cover/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -7,9 +11,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="https://getbootstrap.com/favicon.ico">
-
-    <title>Cover Template for Bootstrap</title>
+    <link rel="icon" href="favicon.ico">
 
     <!-- Bootstrap core CSS -->
     <link href="./Cover Template for Bootstrap_files/bootstrap.min.css" rel="stylesheet">
@@ -31,56 +33,57 @@
     <![endif]-->
   </head>
 
-  <body>
+	<body>
 
-    <div class="site-wrapper">
+		<div class="site-wrapper">
 
-      <div class="site-wrapper-inner">
+			<div class="site-wrapper-inner">
 
-        <div class="cover-container">
+				<div class="cover-container">
 
-          <div class="masthead clearfix">
-            <div class="inner">
-              <h3 class="masthead-brand">Cover</h3>
-              <nav>
-                <ul class="nav masthead-nav">
-                  <li class="active"><a href="/">Home</a></li>
-                  <li><a href="/about">About</a></li>
-                  <li><a href="/cv">CV</a></li>
-				  <li><a href="/blog">Blog</a></li>
-                </ul>
-              </nav>
-            </div>
-          </div>
+					<div class="masthead clearfix">
+						<div class="inner">
+							<h3 class="masthead-brand">Liam Harris</h3>
+							<nav>
+								<ul class="nav masthead-nav">
+									<li class="active"><a href="/">Home</a></li>
+									<li><a href="/about">About</a></li>
+									<li><a href="/cv">CV</a></li>
+									<li><a href="/blog">Blog</a></li>
+								</ul>
+							</nav>
+						</div>
+					</div>
 
-          <div class="inner cover">
-            <h1 class="cover-heading">Cover your page.</h1>
-            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-            <p class="lead">
-              <a href="/about" class="btn btn-lg btn-default">Learn more</a>
-            </p>
-          </div>
+					<div class="inner cover">
+						<h1 class="cover-heading">Liam Harris</h1>
+						<p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+						<p class="lead">
+						<a href="/about" class="btn btn-lg btn-default">Learn more</a>
+						</p>
+					</div>
 
-          <div class="mastfoot">
-            <div class="inner">
-              <p>Cover template for <a href="http://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-            </div>
-          </div>
+					<div class="mastfoot">
+						<div class="inner">
+							<p>Cover template for <a href="http://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+						</div>
+					</div>
 
-        </div>
+				</div>
 
-      </div>
+			</div>
 
-    </div>
+		</div>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="./Cover Template for Bootstrap_files/jquery.min.js.download"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="./Cover Template for Bootstrap_files/bootstrap.min.js.download"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="./Cover Template for Bootstrap_files/ie10-viewport-bug-workaround.js.download"></script>
-  
+	<!-- Bootstrap core JavaScript
+	================================================== -->
+	<!-- Placed at the end of the document so the pages load faster -->
+	<script src="./Cover Template for Bootstrap_files/jquery.min.js.download"></script>
+	<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+	<script src="./Cover Template for Bootstrap_files/bootstrap.min.js.download"></script>
+	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+	<script src="./Cover Template for Bootstrap_files/ie10-viewport-bug-workaround.js.download"></script>
 
-</body></html>
+
+	</body>
+</html>
