--- a/cv/index.html
+++ b/cv/index.html
@@ -4,5 +4,5 @@ title: It's Latin
 ---
 <div class="blurb">
 	<h1>Super Important Title Text</h1>
-	<p>The hat stays</p>
+	<p>Popcorn</p>
 </div><!-- /.blurb -->
