--- a/about/index.html
+++ b/about/index.html
@@ -4,5 +4,5 @@ title: About
 ---
 <div class="blurb">
 	<h1>Super Important Title Text</h1>
-	<p>Enlightened alt-centrist</p>
+	<p>Less important body text</p>
 </div><!-- /.blurb -->
