--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ title: Liam Harris
 								<ul class="nav masthead-nav">
 									<li class="active"><a href="/">Home</a></li>
 									<li><a href="/about">About</a></li>
+									<li><a href="/project1">Project 1</a></li>
 									<li><a href="/cv">CV</a></li>
 									<li><a href="/blog">Blog</a></li>
 								</ul>
