--- a/project1/index.html
+++ b/project1/index.html
@@ -20,4 +20,19 @@ title: Project 1
 	For the prototype the command “next” can be used to move to the next image. Voice listening was activated when the image was changed. This was unintuitive and clumsy for users. For a more robust execution I would want a dedicated action that activates the voice prompt.
 	</p>
 	
+	<br><br>
+	
+	<h2>Magnetic Button</h2>
+	
+	<p>
+	A technical challenge was to implement user interaction using the magnetic button on the virtual reality image viewer app. This is an input device built into the Google Cardboard headset.
+	<br>
+	We began by testing the button using the Treasure Hunt sample app that comes with the Google VR SDK for Android. In this early testing the button was very inconsistent and would often not register the input.
+	We learnt that the button functions use the phone’s inbuilt magnetic field sensor, and began attempts to implement the button in our app. From monitoring the value of the magnetic field sensor we could see the effect of the button. This also showed that the magnetic field was greatly influenced by factors other than the position of the button. The device can easily shift around while in the headset, the user could place the device in the inverted orientation, and different devices have the sensors in different positions. All these factors affect the magnetic field sensor, so the absolute value of the sensor is not an entirely accurate predictor of the position of the button.
+	Our implementation of the button checked the value of the magnetic sensor against two constants associated with the button being in the up and down positions. This worked well for demonstration but because of the variance in the magnetic field, would not be a good long term solution. We decided to design a system to calibrate the magnetic field, and base the button handling logic of those values. Allowing the app to counteract the variance in the sensor read value.
+	Designing the calibration system was a very unique problem. The system had to communicate to the user when to push and release the button, and when the process was complete. The device had to be in the headset to calibrate the button, so the user cannot see or touch. This greatly restricted the tools we had available to design this system. Building this system required finding new design solutions than what I had used in my previous work with mobile development.
+	<br>
+	I learned to consider the platform I am developing for, when designing projects. The problem of building the calibration system initially appeared simple, because I was not considering the strengths and weaknesses of the VR platform
+	</p>
+	
 </div><!-- /.blurb -->
