--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@ title: Liam Harris
 							<nav>
 								<ul class="nav masthead-nav">
 									<li class="active"><a href="/">Home</a></li>
-									<li><a href="/about">About</a></li>
 									<li><a href="/project1">Project 1</a></li>
+									<!-- <li><a href="/about">About</a></li>
 									<li><a href="/cv">CV</a></li>
-									<li><a href="/blog">Blog</a></li>
+									<li><a href="/blog">Blog</a></li> -->
 								</ul>
 							</nav>
 						</div>
@@ -58,9 +58,9 @@ title: Liam Harris
 
 					<div class="inner cover">
 						<h1 class="cover-heading">Liam Harris</h1>
-						<p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+						<p class="lead"></p>
 						<p class="lead">
-						<a href="/about" class="btn btn-lg btn-default">Learn more</a>
+						<a href="/project1" class="btn btn-lg btn-default">Learn more</a>
 						</p>
 					</div>
 
