--- a/project1/index.html
+++ b/project1/index.html
@@ -31,7 +31,7 @@ title: Project 1
 	A technical challenge was to implement user interaction using the magnetic button on the virtual reality image viewer app. This is an input device built into the Google Cardboard headset.
 	<br>
 	<table>
-		<tr> <td><img src="assets/img/mag1.jpg"></td> 	    <td><img ></td> </tr>
+		<tr> <td><img src="assets/img/mag1.jpg"></td> 	    <td><img src="assets/img/mag2.jpg"></td> </tr>
 		<tr> 
 			<td>On the outside of the headset is magnetic disc. It sits in a long slot so the user can shift its position.</td> 
 			<td>On the corresponding position inside the headset is another magnetic disk. This sits in a fitted slot so that it does not shift around.</td>
