--- a/project1/index.html
+++ b/project1/index.html
@@ -52,8 +52,10 @@ title: Project 1
 	<h2>Android Logic Timing</h2>
 	
 	<p>
-	Another technical challenge was running the update logic for the program on a timer loop. I needed to implement this on the vision testing tool for Android. This is a suite of tools to aid people with visual impairment. I needed to build a system for moving on-screen graphics used in the test tools. This was a challenge because the user interface can only be updated on the main thread, and the timer runs on a separate thread. I also wanted the architecture to be easily extendable so I could add additional test tools.
+	My project team was tasked with building suite of tools to aid people with visual impairment. The tools of this program involve moving graphics across the display to test the user for various forms of vision impairment. This task presented the technical challenge of running the update logic for the program on a timer loop. I needed to build a system for moving on-screen graphics used in the test tools. This was a challenge because the user interface can only be updated on the main thread, and the timer runs on a separate thread. I also wanted the architecture to be easily extendable so I could add additional test tools.
+		<br>
 	I started by having each fragment handle its own timing. This meant each tool could have very specialised and efficient timing mechanisms. The cost of this is that I had to duplicate code to build the timing system for each tool. And the lack of uniformity in the tools made it clumsy to integrate multiple tool fragments into the main system, as I needed the application to switch between and run the multiple tool fragments.
+		<br>
 	I made an interface IVisualTest for test tool fragments. This let me use the generic test tool function calls in the outer logic control on the MainActivity. 
 	<br><br>
 	The methods I included in the interface are:
