--- a/project1/index.html
+++ b/project1/index.html
@@ -74,7 +74,11 @@ title: Project 1
 	
 	<br><br>
 	<h2>Filtering Django JSON Output</h2>
-			
+	
+	<p>
+	The data is stored as model classes. Our application stored the data of individual plants in the Item class.	
+	</p>
+	<br>
 	<p>	
  	class Item(models.Model):
 	    itemID = models.AutoField(primary_key=True)
