--- a/project1/index.html
+++ b/project1/index.html
@@ -88,9 +88,12 @@ Using the Django Rest Framework, we built a web API to deliver data from the bot
 			
 	<br>
 			
-	<img src="/assets/img/model.png"></td>
+	<img src="/assets/img/model.png"><br>
 	<caption>The data is stored as model classes. Our application stored the data of individual plants in the Item class.</caption>
-		
+	
+	<img src="/assets/img/serializer.PNG"><br>
+	<caption>The data is stored as model classes. Our application stored the data of individual plants in the Item class.</caption>
+	
 			
 	<br><br>
 	<h2>Reflective Statement</h2>	
