--- a/project1/index.html
+++ b/project1/index.html
@@ -88,12 +88,12 @@ Using the Django Rest Framework, we built a web API to deliver data from the bot
 			
 	<br>
 			
-	<img src="/assets/img/model.png"><br>
+	<img src="/assets/img/model.PNG"><br>
 	<caption>The data is stored as model classes. Our application stored the data of individual plants in the Item class.</caption>
-	
+	<br>
 	<img src="/assets/img/serializer.PNG"><br>
-	<caption>The data is stored as model classes. Our application stored the data of individual plants in the Item class.</caption>
-	
+	<caption>The serializer class converts the model from it's python class to a JSON string</caption>
+	<br>
 			
 	<br><br>
 	<h2>Reflective Statement</h2>	
