--- a/project1/index.html
+++ b/project1/index.html
@@ -87,14 +87,17 @@ Using the Django Rest Framework, we built a web API to deliver data from the bot
 	</p>
 			
 	<br>
-			
-	<img src="/assets/img/model.PNG"><br>
-	<caption>The data is stored as model classes. Our application stored the data of individual plants in the Item class.</caption>
+	<table>
+		<tr><th><caption>The data is stored as model classes. Our application stored the data of individual plants in the Item class.</caption></th></tr>
+		<tr><td><img src="/assets/img/model.PNG"></td></tr>
+	</table>
 	<br>
-	<img src="/assets/img/serializer.PNG"><br>
-	<caption>The serializer class converts the model from it's python class to a JSON string</caption>
-	<br>
-			
+	<table>
+		<tr><th><caption>The serializer class converts the model from it's python class to a JSON string</caption></th></tr>
+		<tr><td><img src="/assets/img/serializer.PNG"></td></tr>
+	</table>
+	
+		
 	<br><br>
 	<h2>Reflective Statement</h2>	
 			
