--- a/project1/index.html
+++ b/project1/index.html
@@ -88,7 +88,7 @@ Using the Django Rest Framework, we built a web API to deliver data from the bot
 			
 	<br>
 	<table>
-		<tr><th><caption>The data is stored as model classes. Our application stored the data of individual plants in the Item class.</caption></th></tr>
+		<tr><td><caption>The data is stored as model classes. Our application stored the data of individual plants in the Item class.</caption></td></tr>
 		<tr><td><img src="/assets/img/model.PNG"></td></tr>
 	</table>
 	<br>
