--- a/project1/index.html
+++ b/project1/index.html
@@ -88,13 +88,13 @@ Using the Django Rest Framework, we built a web API to deliver data from the bot
 			
 	<br>
 	<table>
-		<tr><td><caption>The data is stored as model classes. Our application stored the data of individual plants in the Item class.</caption></td></tr>
+		<tr><td><p>The data is stored as model classes. Our application stored the data of individual plants in the Item class.</p></td></tr>
 		<tr><td><img src="/assets/img/model.PNG"></td></tr>
 	</table>
 	<br>
 	<table>
-		<tr><th><caption>The serializer class converts the model from it's python class to a JSON string</caption></th></tr>
-		<tr><td><img src="/assets/img/serializer.PNG"></td></tr>
+		<tr><p>The serializer class converts the model from it's python class to a JSON string</p></tr>
+		<tr><img src="/assets/img/serializer.PNG"></tr>
 	</table>
 	
 		
