--- a/project1/index.html
+++ b/project1/index.html
@@ -87,15 +87,15 @@ Using the Django Rest Framework, we built a web API to deliver data from the bot
 	</p>
 			
 	<br>
-	<table>
-		<tr><td><p>The data is stored as model classes. Our application stored the data of individual plants in the Item class.</p></td></tr>
-		<tr><td><img src="/assets/img/model.PNG"></td></tr>
-	</table>
+	
+	<p>The data is stored as model classes. Our application stored the data of individual plants in the Item class.</p>
+	<img src="/assets/img/model.PNG">
+
 	<br>
-	<table>
-		<tr><p>The serializer class converts the model from it's python class to a JSON string</p></tr>
-		<tr><img src="/assets/img/serializer.PNG"></tr>
-	</table>
+	
+	<p>The serializer class converts the model from it's python class to a JSON string</p>
+	<img src="/assets/img/serializer.PNG">
+	
 	
 		
 	<br><br>
