--- a/project1/index.html
+++ b/project1/index.html
@@ -91,11 +91,21 @@ Using the Django Rest Framework, we built a web API to deliver data from the bot
 	<p>The data is stored as model classes. Our application stored the data of individual plants in the Item class.</p>
 	<img src="/assets/img/model.PNG">
 
-	<br>
-	
+	<br><br>
 	<p>The serializer class converts the model from it's python class to a JSON string</p>
 	<img src="/assets/img/serializer.PNG">
 	
+	<br><br>
+	<p>The serializer class converts the model from it's python class to a JSON string</p>
+	<img src="/assets/img/serializer.PNG">
+			
+	<br><br>
+	<p>A view uses the model and the serializer to form a webpage for the user</p>
+	<img src="/assets/img/listView.PNG">
+			
+	<br><br>
+	<p>The views are mapped onto urls in the urls python file</p>
+	<img src="/assets/img/url.PNG">
 	
 		
 	<br><br>
