--- a/project1/index.html
+++ b/project1/index.html
@@ -101,7 +101,7 @@ Using the Django Rest Framework, we built a web API to deliver data from the bot
 			
 	<br><br>
 	<p>A view uses the model and the serializer to form a webpage for the user</p>
-	<img src="/assets/img/listView.PNG">
+	<img src="/assets/img/itemList.PNG">
 			
 	<br><br>
 	<p>The views are mapped onto urls in the urls python file</p>
