--- a/project1/index.html
+++ b/project1/index.html
@@ -94,10 +94,6 @@ Using the Django Rest Framework, we built a web API to deliver data from the bot
 	<br><br>
 	<p>The serializer class converts the model from it's python class to a JSON string</p>
 	<img src="/assets/img/serializer.PNG">
-	
-	<br><br>
-	<p>The serializer class converts the model from it's python class to a JSON string</p>
-	<img src="/assets/img/serializer.PNG">
 			
 	<br><br>
 	<p>A view uses the model and the serializer to form a webpage for the user</p>
@@ -106,6 +102,10 @@ Using the Django Rest Framework, we built a web API to deliver data from the bot
 	<br><br>
 	<p>The views are mapped onto urls in the urls python file</p>
 	<img src="/assets/img/url.PNG">
+			
+	<br><br>
+	<p>The user can send a url request to get data from the web server</p>
+	<img src="/assets/img/json.PNG">
 	
 		
 	<br><br>
