--- a/project1/index.html
+++ b/project1/index.html
@@ -76,7 +76,7 @@ title: Project 1
 	<h2>Filtering Django JSON Output</h2>
 			
 	<p>
-	My team had the task of building an application for the local botanical gardens, to store and present information on their plant collection. The end product will consist of front end mobile application to present information the the user. As well as a back end web service to manage the database containing the plant data. This semester we began working the Django Rest Framework as a possible platform for the back end database.
+	My team had the task of building an application for the local botanical gardens, to store and present information on their plant collection. The end product will consist of front end mobile application to present information the the user. As well as a back end web service to manage the database containing the plant data. This semester we began working with the Django Rest Framework as a possible platform for the back end database.
 	<br><br>
 Django is a python framework for building web applications. Django uses the model, view, controller architecture. 
 	<br>
