--- a/project1/index.html
+++ b/project1/index.html
@@ -140,7 +140,7 @@ This is a useful feature for allowing the front end application to easily retrie
 			
 	<br><br><br>
 	<p>
-	
+	The API also implemented parameter filtering. This lets us map search terms onto the fields of model you are searching. First we implemented this built directly on top of the list entries view. Then it was moved into a filter class which was much more clean and readable.
 	<br><img src="/assets/img/ParamFilter.PNG">
 	<br><br>	
 		
